Writing apis.yml

--- a/apis.yml
+++ b/apis.yml
@@ -5,14 +5,23 @@ apis:
   - aid: fashn:fashn
     name: FASHN
     tags:
-      - API
+      - Fashion
+      - Clothing
     humanURL: ' https://fashn.ai/products/api'
     properties:
       - url: ' https://fashn.ai/products/api'
         type: Documentation
     description: >-
-      Give your users an unforgettable experience by integrating our clothing
-      try-on solution right into your own app or website 
+      FASHN AI is a revolutionary artificial intelligence platform that
+      leverages cutting-edge technology to provide personalized and data-driven
+      fashion recommendations to users. By analyzing individual preferences,
+      style choices, and body measurements, FASHN AI curates a curated selection
+      of clothing and accessories that best fit each user's unique taste and
+      needs. This innovative platform not only saves users time and effort in
+      browsing through endless options but also helps them discover new brands
+      and trends that align with their personal fashion aesthetic. With FASHN
+      AI, users can confidently shop online and elevate their style with ease
+      and confidence.
 name: FASHN AI
 tags:
   - Fashion
@@ -24,15 +33,8 @@ created: '2025-03-01'
 modified: '2025-04-07'
 position: Consuming
 description: >-
-  FASHN AI is a revolutionary technology that uses artificial intelligence to
-  revolutionize the fashion industry. By analyzing trends, customer preferences,
-  and market data, FASHN AI is able to predict future trends, suggest
-  personalized recommendations, and optimize product offerings for brands and
-  retailers. This innovative platform combines data science, machine learning,
-  and advanced analytics to help fashion companies stay ahead of the curve and
-  make informed decisions that drive business growth. With FASHN AI, businesses
-  can streamline their operations, enhance customer experiences, and increase
-  profitability in a rapidly changing industry.
+  Give your users an unforgettable experience by integrating our clothing try-on
+  solution right into your own app or website 
 maintainers:
   - FN: Kin Lane
     email: info@apievangelist.com
